Bug 329688 - [brush outliner] bugs with size and resize of brush with sensor on size
Summary: [brush outliner] bugs with size and resize of brush with sensor on size
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-07 12:58 UTC by David REVOY
Modified: 2014-01-07 16:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2014-01-07 12:58:18 UTC
Hi, I think this bug is directly a side effect of fixing bug 329625.

To reproduce :
============
1) Open Krita, 
2) Take a canvas
3) take a preset with dynamic on size ( exemple : airbrushes )
4) Paint, resize with ] and [  on keyboard, or with holding <shift>

Result :
======
1) The outliner is now really little. Minimal dot
2) While resizing with ] and [ , outliner jumps from actual position, to max size the sensor offer. Flickering
3) While resizing with <shift> idem ; but no flicker. 

Expected :
=========
As it were before :-)
Comment 1 Dmitry Kazakov 2014-01-07 15:54:55 UTC
Aaaah! Stupid me! :)
Comment 2 Dmitry Kazakov 2014-01-07 16:00:02 UTC
Git commit 1a2953417dc9027c7513ad6e629805a85831bca8 by Dmitry Kazakov.
Committed on 07/01/2014 at 15:59.
Pushed by dkazakov into branch 'master'.

Fix the outline size in hover mode


In hover mode the pressure must be emulated to be 1.0, otherwise
we will not see anything.

M  +3    -3    krita/ui/tool/kis_painting_information_builder.cpp

http://commits.kde.org/calligra/1a2953417dc9027c7513ad6e629805a85831bca8
Comment 3 Dmitry Kazakov 2014-01-07 16:00:25 UTC
Git commit 8ad47a9bc65c6315ed5cf26823966db6421971cb by Dmitry Kazakov.
Committed on 07/01/2014 at 15:59.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix the outline size in hover mode

In hover mode the pressure must be emulated to be 1.0, otherwise
we will not see anything.

M  +3    -3    krita/ui/tool/kis_painting_information_builder.cpp

http://commits.kde.org/calligra/8ad47a9bc65c6315ed5cf26823966db6421971cb