Fix the outline size in hover mode

In hover mode the pressure must be emulated to be 1.0, otherwise
we will not see anything.

BUG:329688